# chatbot-v2

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
